<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_delete">DEL</string>
    <string name="btn_AC">AC</string>
    <string name="btn_bracket_left">(</string>
    <string name="btn_bracket_right">)</string>
    <string name="btn_divide">÷</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_multiplication">×</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_plus">+</string>
    <string name="btn_negative">+/-</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_equal">=</string>
    <string name="title_activity_math_calculator">MathCalculator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>